# archive-botv2

./: .gitignore  README.md  main.py  pyproject.toml
api/: app.py
constants/: prompts.py
core/: config.py
models/: detail_page.py  listing_page.py
services/: database.py  llm_service.py  redis_services.py  request_service.py
ui/: app.vue  nuxt.config.ts  package-lock.json
ui/assets/css/: main.css
ui/components/: Form.vue  Log.vue
ui/pages/: dashboard.vue  index.vue
ui/server/api/: get-log.get.ts  start-process.post.ts
utilities/: utils.py
